# mindx

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/agents/: registry.py  teste_agent.py
app/agents/prompts/: prompt_exemple.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: chat.py
app/core/: config.py
app/schemas/: chat_agent.py
app/services/: agent_service.py
